--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,6 +24,7 @@ jobs:
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
           GITHUB_TOKEN: ${{ github.token }}
+        working-directory: ./Source
         run: |
           python generate_json.py -t ${{ secrets.GITHUB_TOKEN }}
       - uses: stefanzweifel/git-auto-commit-action@v4
