--- a/zSource/apps.json
+++ b/zSource/apps.json
@@ -1,7 +1,7 @@
 {
-    "name": "purp0s3 Tweaked IPA Library",
-    "identifier": "xyz.hieuddo.tweakediosapps",
-    "sourceURL": "https://raw.githubusercontent.com/purp0s3/Tweaked-iOS-Apps/main/Source/apps.json",
+    "name": "purp0s3 Tweaked iOS Apps",
+    "identifier": "purp0s3.hieuddo.tweakediosapps",
+    "sourceURL": "https://raw.githubusercontent.com/purp0s3/Tweaked-iOS-Apps/main/zSource/apps.json",
     "apps": [
         {
             "name": "Instagram",
